# open-allocator

./: .env.example  .gitignore  AGENTS.md  AGENT_GUIDE.md  CLAUDE.md  CODEX.md  LICENSE  OPENCODE.md  PROJECT_CONTEXT.md  README.md  SECURITY.md  policy.yaml  pyproject.toml
docs/: funding-and-bridging.md  gasless-execution.md  onetx-analysis-fields.md  safe-guard-policy.md
schemas/: allocation-spec.schema.json  allocation.schema.json  policy.schema.json  tx-plan.schema.json  vault-score.schema.json
skills/: agentic-allocation.md  build-allocation.md  discover.md  execute-with-1tx.md  rebalance.md  score.md  withdraw.md
tasks/: 00-01-uv-project-setup.md  00-02-config-and-env-loader.md  00-03-domain-types.md  00-04-json-schemas.md  00-05-cli-skeleton.md  00-06-agent-docs.md  01-00-onetx-client.md  01-01-universe-discovery.md  01-02-instrument-analysis.md  01-03-risk-scoring.md  01-04-cli-list-and-score.md  02-00-allocator.md  02-01-policy-enforcement.md  02-02-policy-yaml-loader.md  02-03-portfolio-simulation.md  02-04-cli-allocate.md  03-00-signer-interface.md  03-01-rpc-registry.md  03-02-executor.md  03-03-cli-execute.md  03-04-mainnet-proof.md  04-00-positions-reconcile.md  04-01-rebalance.md  04-02-withdraw.md  04-03-checkpoints.md  05-00-remote-signer.md  05-01-safe-multisig.md  05-02-usdc-paymaster-gas.md  05-03-skills-and-reviewer.md  README.md
tests/: conftest.py  test_allocator.py  test_backtest.py  test_chains.py  test_checkpoint.py  test_cli.py  test_client.py  test_composition.py  test_config.py  test_costs.py  test_docs.py  test_domain_types.py  (+25 more)
(+47 files in other folders)
